# project-tracker

./: .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  MIGRATION_PLAN.md  PRD.md  PRODUCT.md  PROJECT_STATUS.md  WINDOWS_SETUP.md  __init__.py  app_web.py  frontend-polish.md  main.py  master-prompt.md  phase-0.md  project_tracker_dbs.spec  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: hooks.json
.harness-worktrees/: project_data.json
.impeccable/: design.json
.playwright-mcp/: page-2026-06-30T18-31-46-968Z.yml
_docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  DESIGN_RULES.md  FILE_ROUTING.md  HANDOFF_PROMPT.md  MIGRATION_PLAN.md  PROGRESS.md  PROMPT_GUIDE.md  SKILL_ROUTING.md  TECH_STACK.md  WORKFLOW.md  automations_plan_flow.md  fable-mode.md  flow-tiptap.md  master-prompt.md  session-notes.md
_reference/: project_tracker_dbs_full_prototype_v2_AS_IS_PY_INJECTED.html
core/: enums.py  exceptions.py  models.py  rules.py  signal.py  state_machine.py
docs/: audit-consolidated-2026-06-16.md  automations-parity-matrix.md  dashboard-fix-plan.md  dashboard-parity-matrix.md  packaging-readiness.md  project-details-parity-matrix.md  redesign-dashboard-master-detail.prompt.md  redesign-topbar-zcode-teams.prompt.md  release-candidate-manual-test-plan.md  windows-manual-test-checklist.md
frontend/: .gitignore  CLAUDE.md  automations.html  dashboard.html  index.html  package-lock.json  package.json  project_detail.html  report.html  second_brain.html  settings.html  svelte.config.js  tsconfig.json  vite.config.ts
(+338 files in other folders)
