[project]
name = "project-tracker-dbs"
version = "0.1.0"
description = "Windows desktop tracker for CR deployment projects"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.6.0",
  "pywin32>=306; platform_system == 'Windows'",
  "pyinstaller>=6.0.0",
  "pyautogui>=0.9.54",
  "pyperclip>=1.8.2",
  "send2trash>=1.8.3",
  "watchdog>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
